# CookieCutterMLLightning

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  train_classification.py
configs/: c10-cct.json  c10-dino.json  c10-rn18.json  m-rn18.json
ml/: __init__.py  config.py  test.py  util.py  wandb_util.py
ml/aug/: __init__.py
ml/aug/afa/: __init__.py  fourier.py  real.py  spatial.py
ml/aug/apr/: __init__.py  mix_data.py
ml/aug/augmix/: __init__.py  augmix.py
ml/aug/prime/: __init__.py  color_jitter.py  diffeomorphism.py  modules.py  rand_filter.py  utils.py
ml/aug/ta/: __init__.py  trivial.py
ml/data/: __init__.py  cifar.py  mnist.py  util.py
ml/layers/: __init__.py  attention.py  block.py  dino_head.py  layer_scale.py  patch_embed.py  swiglu_ffn.py
ml/loss/: __init__.py
ml/metric/: __init__.py  metrics.py
ml/mix/: __init__.py  cutmix.py  cutmixup.py  mixup.py
ml/model/: __init__.py
ml/model/image/: __init__.py  cifar.py  imagenet.py
ml/model/image/compact_transformers/: __init__.py  cct.py  cvt.py  vit_lite.py
ml/model/image/dino/: __init__.py  vit_v2.py
ml/module/: __init__.py  default.py
ml/optim/: __init__.py  optim.py  utils.py
ml/optim/custom/: __init__.py  sam.py
ml/optim/custom/optim/: __init__.py  sam.py
ml/probing/: __init__.py  toy.py  util.py
ml/probing/analyser/: __init__.py  knn.py  lda.py  linear.py  logreg.py  pca.py
ml/scheduling/: __init__.py  schedulers.py  util.py
ml/trainer/: __init__.py  base.py
notebooks/: .nbautoexport
(+6 files in other folders)
